# ESP32-GATEWAY

./: .gitignore  FLASHING.md  README.md  amt10-v.md  esp_serial_reader.py  flash_and_read.bat  idf_activate.bat  idf_activate.sh  sdkconfig
.github/workflows/: ci.yml  release.yml
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/: CMakeLists.txt
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/.github/workflows/: ci.yml
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/main/: CMakeLists.txt  app_config.h  ethernet_example_main.c  motor_control.c  motor_control.h  mqtt_control.c  mqtt_control.h  rotor_encoder.c  rotor_encoder.h
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/src/: CMakeLists.txt  app_config.h
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/src/encoder/: encoder.c  encoder.h
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/src/network/: network.c  network.h
SOFTWARE/Newest-board-revisions/ESP32_Gateway_Ethernet_v4.0/src/network/mqtt/: mqtt.c  mqtt.h  mqtt_config.c  mqtt_config.h
src/: CMakeLists.txt  app_config.h  main.c
src/driver/: driver.c  driver.h
src/network/: network.c
src/network/ethernet/: ethernet.c  ethernet.h
src/network/mqtt/: mqtt.c  mqtt_schema.h
src/utils/: utils.c  utils.h
